--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@
     <a href="#hobi">Hobi</a>
     <a href="#sosial">Sosial Media</a>
     <a href="#jasa">Jasa</a>
-    <a href="#kenangan">Kenangan</a>
     <a href="#ai">Bot</a>
   </nav>
 
@@ -232,12 +231,7 @@
     </ul>
   </section>
 
-  <section id="kenangan" class="scroll-left">
-    <h2>📚 Kenangan Kelas</h2>
-    <p>Selama kelas VIII-E, banyak momen seru dan lucu bareng teman-teman. Dari belajar bareng, main, sampai foto-foto random di kelas. Kenangan ini bakal selalu aku simpan dan jadi bagian berharga dari hidupku.</p>
-  </section>
-
-  <section id="ai" class="scroll-right">
+  <section id="ai" class="scroll-left">
     <h2>🤖 Bot Interaktif</h2>
     <p>Mau tau lebih tentang Athar? Kamu bisa tanya langsung lewat bot di bawah ini! Gunakan kata kunci pertanyaan yang tersedia ya 👇</p>
 
