--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
   function askBot() {
     const question = document.getElementById("question").value.toLowerCase();
-    const jawab = memory[question] || "Maaf, aku belum ngerti pertanyaan itu 😅";
+    const jawab = memory[question] || "Maaf, aku belum ngerti pertanyaan itu 😅, Tulis pertanyaan sesuai dengan yang ada di pilih pertanyaan";
     displayAnswer(jawab);
   }
 
