--- a/index.html
+++ b/index.html
@@ -137,16 +137,55 @@
       animation: slideRight 1s ease forwards;
       opacity: 0;
     }
+/* Animasi masuk */
+    @keyframes slideLeftIn {
+  from { transform: translateX(-80px); opacity: 0; }
+  to { transform: translateX(0); opacity: 1; }
+}
 
-    @keyframes slideLeft {
-      from { transform: translateX(-80px); opacity: 0; }
-      to { transform: translateX(0); opacity: 1; }
-    }
+@keyframes slideRightIn {
+  from { transform: translateX(80px); opacity: 0; }
+  to { transform: translateX(0); opacity: 1; }
+}
 
-    @keyframes slideRight {
-      from { transform: translateX(80px); opacity: 0; }
-      to { transform: translateX(0); opacity: 1; }
-    }
+/* Animasi keluar */
+@keyframes slideLeftOut {
+  from { transform: translateX(0); opacity: 1; }
+  to { transform: translateX(-80px); opacity: 0; }
+}
+
+@keyframes slideRightOut {
+  from { transform: translateX(0); opacity: 1; }
+  to { transform: translateX(80px); opacity: 0; }
+}
+
+.scroll-left {
+  opacity: 0;
+  transform: translateX(-80px);
+  animation-fill-mode: forwards;
+}
+
+.scroll-right {
+  opacity: 0;
+  transform: translateX(80px);
+  animation-fill-mode: forwards;
+}
+
+.slideLeftIn {
+  animation: slideLeftIn 0.7s forwards;
+}
+
+.slideRightIn {
+  animation: slideRightIn 0.7s forwards;
+}
+
+.slideLeftOut {
+  animation: slideLeftOut 0.7s forwards;
+}
+
+.slideRightOut {
+  animation: slideRightOut 0.7s forwards;
+}
 
     @media (min-width: 768px) {
       header {
@@ -320,6 +359,47 @@
     }
     typeWriter();
   }
+<!-- ... bagian body lainnya ... -->
+
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const options = {
+      root: null,
+      rootMargin: '0px',
+      threshold: 0.1
+    };
+
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        const el = entry.target;
+
+        if (entry.isIntersecting) {
+          if (el.classList.contains('scroll-left')) {
+            el.classList.remove('slideLeftOut');
+            el.classList.add('slideLeftIn');
+          } else if (el.classList.contains('scroll-right')) {
+            el.classList.remove('slideRightOut');
+            el.classList.add('slideRightIn');
+          }
+        } else {
+          const rect = el.getBoundingClientRect();
+          if (rect.top > window.innerHeight || rect.bottom < 0) {
+            if (el.classList.contains('scroll-left')) {
+              el.classList.remove('slideLeftIn');
+              el.classList.add('slideLeftOut');
+            } else if (el.classList.contains('scroll-right')) {
+              el.classList.remove('slideRightIn');
+              el.classList.add('slideRightOut');
+            }
+          }
+        }
+      });
+    }, options);
+
+    document.querySelectorAll('.scroll-left, .scroll-right').forEach(el => {
+      observer.observe(el);
+    });
+  });
 </script>
 </body>
 </html>
